--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ languageCode        = "en-US"
 layoutdir           = "layouts"
 publishdir          = "public"
 theme               = "cocoa"
-author              = "Consorcio de Datos de Biodiversidad del Uruguay"
+author              = "Florencia Grattarola"
 title               = "Consorcio de Datos de Biodiversidad del Uruguay"
 pygmentsuseclasses  = true
 #disqusshortname     = "cocoaexamplesite" # Comment out to disable Disqus.
@@ -36,7 +36,7 @@ author                 = "Consorcio de Datos de Biodiversidad del Uruguay"
 cachebuster            = false                          # add the current unix timestamp in query string for cache busting css assets
 dateform               = "Jan 2, 2006"
 dateformfull           = "Mon Jan 2 2006 15:04:05 MST"
-description            = "Información de interés para los integrantes del Consorcio de Datos de Biodiversidad del Uruguay"
+description            = "Información de interés para los integrantes"
 email                  = "fgrattarola@lincoln.ac.uk"
 extracssfiles          = [ "/css/override.css" ]       # In your `static` directory, add/remove files as necessary.
 
