--- a/config.toml
+++ b/config.toml
@@ -40,9 +40,16 @@ weight                 = -90
 identifier             = "publicaciones"
 url                    = "/publicaciones/"
 
+[[menu.main]]
+name                   = "1er Encuentro"
+weight                 = -80
+identifier             = "1erEncuentro"
+url                    = "/1erEncuentro/"
+
+
 
 [params]
-include_rss            = false                          # include RSS <link> tag in <head> and show RSS icon
+include_rss            = false                         # include RSS <link> tag in <head> and show RSS icon
 latestpostscount       = 0                             # how many posts to display on the home page
 i18n_flags             = false                         # whether to display small country flags for available translations
 author                 = "Consorcio de Datos de Biodiversidad del Uruguay"
